# RPEAS

./: .gitignore  LICENSE  README.md  bot.py  eas_audio.py  eas_service.xml  pyproject.toml  requirements.txt  run_bot.bat  test_tom.ps1
dectalk_say/: .gitignore  README.md  choir.py  generateSpectrograms.py
dectalk_say/pyFuncs/: MidiProcessing.py  PhonemeProcessing.py  spectrogramAnimation.py
dectalk_say/songs/AuldLangSyne/: settings.yaml
dectalk_say/songs/AuldLangSyne/lyrics/: Alto.txt  Bass.txt  Soprano.txt  Tenor.txt
dectalk_say/songs/CarolOfTheBells_Short/: settings.yaml
dectalk_say/songs/CarolOfTheBells_Short/lyrics/: Alto.txt  Bass.txt  Soprano.txt  Tenor.txt
dectalk_say/songs/DaisyBell/: settings.yaml
dectalk_say/songs/DaisyBell/lyrics/: Alto.txt  Bass.txt  Tenor.txt  Vocals.txt
dectalk_say/timingTesting/: compTest.py  procTestData.py  testParameters.py
