[project]
name = "rpeas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp-session>=2.12.1",
    "beautifulsoup4>=4.14.3",
    "cryptography>=47.0.0",
    "davey>=0.1.5",
    "discord-py>=2.7.1",
    "easgen>=0.1.9",
    "numpy>=2.4.4",
    "pydub>=0.25.1",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
]
